fix: load cluster problem